--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body> <h1>  <p align=left> Cachorros vacinados 
  
 <body>
+ <img src="images/cachorros.jpg">
 body {
     margin: 0;
 }
@@ -20,5 +21,4 @@ body {
     position: relative;
     height: 100vh;
     width: 100vw;
-    background-color: red;
-}
+    background-color: red;}
